--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
     <div class="container">
         <div id="game" class="justify-center flex-column">
           <h2 id="question">What is the answer to this questions?</h2>
-          <div class="choice-container">
+          <button class="choice-container">
             <p class="choice-prefix">A</p>
             <p class="choice-text" data-number="1">Choice 1</p>
-          </div>
-          <div class="choice-container">
+          </button>
+          <button class="choice-container">
             <p class="choice-prefix">B</p>
             <p class="choice-text" data-number="2">Choice 2</p>
-          </div>
-          <div class="choice-container">
+          </button>
+          <button class="choice-container">
             <p class="choice-prefix">C</p>
             <p class="choice-text" data-number="3">Choice 3</p>
-          </div>
-          <div class="choice-container">
+          </button>
+          <button class="choice-container">
             <p class="choice-prefix">D</p>
             <p class="choice-text" data-number="4">Choice 4</p>
-          </div>
+          </button>
         </div>
       </div>
       <script src="./assets/js/script.js"></script>
